--- a/app/views/exam_feedbacks/new.html.erb
+++ b/app/views/exam_feedbacks/new.html.erb
@@ -31,7 +31,7 @@ function show_answere(question_id) {
           <td width="69%">
             <%= eo_markdown(question.qdata) %>
             <div id="light_<%= question.id.to_s%>" style="display:none">
-              <%= text_field_tag "choice_#{question.id.to_s}_answer", nil,:maxlength => 1 %>
+              <%= text_field_tag "choice_#{question.id.to_s}_answer", params[:answer],:maxlength => 1 %>
             </div>
           </td>
           <td width="30%">
@@ -46,7 +46,7 @@ function show_answere(question_id) {
           <td width="69%">
             <%= eo_markdown(question.qdata) %>
             <div id="light_<%= question.id.to_s%>" style="display:none">
-              <%= text_field_tag "judgement_#{question.id.to_s}_answer", nil,:maxlength => 4 %>
+              <%= text_field_tag "judgement_#{question.id.to_s}_answer", params[:answer],:maxlength => 5 %>
             </div>
           </td>
           <td width="30%">
@@ -61,7 +61,7 @@ function show_answere(question_id) {
           <td width="69%">
             <%= eo_markdown(question.qdata) %>
             <div id="light_<%= question.id.to_s%>" style="display:none">
-              <%= text_field_tag "dialogical_#{question.id.to_s}_answer", nil %>
+              <%= text_field_tag "dialogical_#{question.id.to_s}_answer", params[:answer] %>
             </div>
           </td>
           <td width="30%">
@@ -78,13 +78,5 @@ function show_answere(question_id) {
     <% end %>
   <% end %>
   </div>
-  <div id="dashboard-right" class="span4">
-    <% if current_user.admin? %>
-    <h3 class="subtitle">管理考题</h3>
-    <div class="divider15"></div>
-    <div class="well">
-      <a href="<%= new_examination_question_path(@exam.id) %>" data-toggle="modal" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 添加新考题</a>
-    </div>
-    <% end %>
   </div>
 </div>
