--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -12,6 +12,7 @@
         <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的案例</a></li>
         <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的成长记录</a></li>
         <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的荣誉</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的权限</a></li>
       </ul>
       </li>
       
@@ -50,7 +51,7 @@
         <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal">能力评估管理</a></li>
         <li class="<%= "active" if active == 'knowledage' %>"><a href="<%= knowledge_path %>">社区管理</a></li>
         <li class="<%= "active" if active == 'datamining' %>"><a href="<%= datamining_path %>">统计中心</a></li>
-        <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal">权限管理</a></li>
+        <li class="<%= "active" if active == 'permission' %>"><a href="<%= permissions_path %>">权限管理</a></li>
       </ul>
       </li>
       <% end %>
