--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -54,9 +54,13 @@
           </div>
         </div>
   
+        <% puts (can? :update, @user) %>
+        <% puts "I am Here!!!!!" %>
+        <% if can? :update, @user %> 
         <div class="form-actions">
-        <%= f.button :submit, '修改用户信息', :class => "btn-primary"  %>
+          <%= f.button :submit, '修改用户信息', :class => "btn-primary"  %>
         </div>
+        <% end %>
       <% end %>
     </div>
   </div>
