--- a/app/views/course_classes/show.html.erb
+++ b/app/views/course_classes/show.html.erb
@@ -97,6 +97,7 @@
         <% else %>
         <p><%= t("course.all.notic1") %></p>
         <% end %>
+        <div class='course-class-uploader-form'>
         <%= simple_form_for(Attachment.new, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
             <%= f.input :description %>
             <%= f.input :file, :as => :file %>
@@ -104,6 +105,7 @@
             <%= f.hidden_field :attachable_id, :value => @course_class.id %>
           <%= f.button :submit, '上传附件', :class => "btn-primary"  %>
         <% end %>
+        </div>
       </div>
       <div id="tabs-4" class="course-discussion">
         <div class="discuss-list"> 
