--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -22,16 +22,30 @@ $(function() {
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <% if current_user.notifications.count > 0 %>
+    <% if @active_notifications.count > 0 %>
     <div class="alert alert-info alert-block">
       <button data-dismiss="alert" class="close" type="button">&times;</button>
       <h4>最新消息：</h4>
       <ul class='notificaiton-list'>
-        <% current_user.notifications.each do |n| %>
+        <% @active_notifications.each do |n| %>
         <li><%= link_to notice_description(n), notice_url(n) %></li>
         <% end %>
       </ul>
     </div><!--notifications-->
+    <div class="divider15"></div>
+    <% end %>
+
+    <% if current_user.pending_todos.count > 0 %>
+    <h4 class="widgettitle"><span class="iconfa-check"></span> 待办事项（<%= current_user.pending_todos.count %>）</h4>
+    <div class="widgetcontent nopadding">
+      <ul class="user-todo-list">
+        <% current_user.pending_todos.each do |todo| %>
+        <li>
+          <%= todo_description(todo) %><span class='todo-action'><%= link_to "点击处理", todo_url(todo), :class => 'btn btn-primary btn-small' %></span>
+        </li>
+        <% end %>
+      </ul>
+    </div>
     <div class="divider15"></div>
     <% end %>
 
