--- a/app/views/training_plans/index.html.erb
+++ b/app/views/training_plans/index.html.erb
@@ -10,25 +10,26 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h4 class="widgettitle">所有培训计划</h4>
+    <h4 class="widgettitle">所有培训计划（<%= @tps.count %>）</h4>
     <% if @tps.count > 0 %>
     <div class="widgetcontent nopadding">
-      <table class="table responsive tp-list">
+      <ul class="tp-list">
       <% @tps.each do |tp| %>
-      <tr>
-        <td><span class="label label-info"><%= tp.state ||= "unknow" %></span></td>
-        <td>
-          <%= link_to tp.title, training_plan_path(tp) %>
-          <span>计划参加人员: <%= tp.users.count %></span>
-          <span>必修课程：<%= tp.required_courses.count %></span>
-          <span>选修课程：<%= tp.optional_courses.count %></span>
-        </td>
-        <td><%= tp.created_at.to_date %></td>
-        <td><%= link_to "编辑", edit_training_plan_path(tp), :class => "btn btn-primary" %></td>
-      </tr>
+      <li>
+        <span class="label label-info pull-right" ><%= training_plan_state(tp) %></span>
+        <h5><%= link_to tp.title, training_plan_path(tp) %></h5>
+        <span>
+          <% if tp.creator %>
+          <%= link_to tp.creator.name, user_path(tp.creator) %>发布于<%= distance_of_time_in_words_to_now tp.created_at %>前 &middot;
+          <% end %>
+          计划参加人员（<%= tp.users.count %>） &middot;
+          必修课程（<%= tp.required_courses.count %>） &middot;
+          选修课程（<%= tp.optional_courses.count %>） 
+        </span>
+      </li>
       <% end %>
-      </table>
-    </div>
+      </div>
+    </ul>
     <% else %>
     <div class="widgetcontent">
       <p>还没有任何培训计划</p>
