--- a/app/views/training_plans/edit.html.erb
+++ b/app/views/training_plans/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>TrainingPlans#edit</h1>
-<p>Find me in app/views/training_plans/edit.html.erb</p>
+<% provide(:title, "修改培训计划") %>
+
+<% content_for :breadcrumbs do %>
+<li><%= link_to "培训计划管理", training_plans_path %> <span class="separator"></span></li>
+<%= content_tag(:li, "修改培训计划") %>
+<% end %>
+
+<% content_for :javascript do %>
+
+<% end %>
+
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h4 class="widgettitle">修改培训计划</h4>
+    <div class="widgetcontent">
+      <div class="divider15"></div>
+      <%= simple_form_for(@tp, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
+        <%= f.input :title, :label => '培训计划标题' %>
+        <%= f.input :feedback_deadline, :label => '学员反馈截止日期', :as => :date, 
+          :start_year => Date.today.year, 
+          :end_year => Date.today.year + 10, 
+          :order => [:year, :month, :day]
+        %>
+        <%= f.association :required_courses, :label => '必修课程', :multiple => true %>
+        <%= f.association :optional_courses, :label => '选修课程', :multiple => true %>
+        <%= f.association :users, :label => '计划参培人员', :collection => User.staff, :multiple => true %>
+        <%= f.hidden_field :creator_id, :value => current_user.id %>
+        <div class="form-actions">
+        <%= f.button :submit, '修改培训计划', :class => "btn-primary"  %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div id="dashboard-right" class="span4">
+  </div>
+</div>
